[package]
name = "noti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
log4rs = "1.2.0"
log = "0.4.20"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
